Изменение главного меню

--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,7 @@
         });        
     </script>
 	
+	
 <style>
 body
 {
@@ -33,14 +34,14 @@ body
 	padding: 10px 0 0 0;
 	list-style: none;  
 	background: #111;
-	background: -moz-linear-gradient(#184402, #111); 
-        background: -webkit-gradient(linear,left bottom,left top,color-stop(0, #111),color-stop(1, #184402));	
-	background: -webkit-linear-gradient(#184402, #111);	
-	background: -o-linear-gradient(#184402, #111);
-	background: -ms-linear-gradient(#184402, #111);
-	background: linear-gradient(#184402, #111);
-	-moz-border-radius: 50px;
-	border-radius: 50px;
+	background: -moz-linear-gradient(#444, #111); 
+        background: -webkit-gradient(linear,left bottom,left top,color-stop(0, #111),color-stop(1, #444));	
+	background: -webkit-linear-gradient(#444, #111);	
+	background: -o-linear-gradient(#444, #111);
+	background: -ms-linear-gradient(#444, #111);
+	background: linear-gradient(#444, #111);
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 	-moz-box-shadow: 0 2px 1px #9c9c9c;
 	-webkit-box-shadow: 0 2px 1px #9c9c9c;
 	box-shadow: 0 2px 1px #9c9c9c;
@@ -70,7 +71,6 @@ body
 {
 	color: #fafafa;
 }
-
 
 
 #menu li:hover > ul
@@ -145,13 +145,13 @@ body
 
 #menu ul a:hover
 {
-    background: #60a788;
-	background: -moz-linear-gradient(#60a788,  #0186ba);	
+    background: #0186ba;
+	background: -moz-linear-gradient(#04acec,  #0186ba);	
 	background: -webkit-gradient(linear, left top, left bottom, from(#04acec), to(#0186ba));
-	background: -webkit-linear-gradient(#60a788,  #0186ba);
+	background: -webkit-linear-gradient(#04acec,  #0186ba);
 	background: -o-linear-gradient(#04acec,  #0186ba);
 	background: -ms-linear-gradient(#04acec,  #0186ba);
-	background: linear-gradient(#184402,  #184402);
+	background: linear-gradient(#04acec,  #0186ba);
 }
 
 #menu ul li:first-child > a
@@ -217,6 +217,7 @@ body
 * html #menu             { zoom: 1; } /* IE6 */
 *:first-child+html #menu { zoom: 1; } /* IE7 */
 </style>
+
 
 <!-- AdPacks -->
 <style>
