--- a/407p/menu407p.html
+++ b/407p/menu407p.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>CSS3 dropdown menu</title>
+    <title>Модуль 407-П</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
         $(function() {
