--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>CSS3 dropdown menu</title>
+    <title>Модули Кредитной Организации</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
         $(function() {
